...

                OutlinedTextField(
                    value = state.value.newFileName,
                    onValueChange = {viewModel.changeFileName(newFileName = it)},
                    label = { Text(state.value.newFileLabel) },
                    modifier = Modifier.fillMaxWidth().padding(20.dp)
                        .semantics { contentDescription = "new_file_input_text" },
                    singleLine = true,
                    colors = TextFieldDefaults.outlinedTextFieldColors(
                        textColor = Color.White,
                        focusedBorderColor = primaryA1,
                        cursorColor = Color.White,
                        unfocusedBorderColor = primaryA1,
...
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceEvenly,
                    modifier = Modifier.fillMaxWidth(),
                ) {
                    DialogButton(
                        onClick = viewModel::createNewFile,
                        text = "Save",
                    )
                    DialogButton(
                        onClick = onDismiss,
                        text = "Cancel",
                    )
                }
...
